; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_objc-lang.c_objc_skip_trampoline.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_objc-lang.c_objc_skip_trampoline.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64)* @objc_skip_trampoline to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @objc_skip_trampoline(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %5 = load i64, i64* %2, align 8
  %6 = call i64 @SKIP_TRAMPOLINE_CODE(i64 %5)
  store i64 %6, i64* %3, align 8
  %7 = load i64, i64* %3, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %12

9:                                                ; preds = %1
  %10 = load i64, i64* %3, align 8
  %11 = call i32 @find_objc_msgcall(i64 %10, i64* %4)
  br label %15

12:                                               ; preds = %1
  %13 = load i64, i64* %2, align 8
  %14 = call i32 @find_objc_msgcall(i64 %13, i64* %4)
  br label %15

15:                                               ; preds = %12, %9
  %16 = load i64, i64* %4, align 8
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %26

18:                                               ; preds = %15
  %19 = load i64, i64* %4, align 8
  %20 = call i64 @SKIP_TRAMPOLINE_CODE(i64 %19)
  store i64 %20, i64* %3, align 8
  %21 = load i64, i64* %3, align 8
  %22 = icmp eq i64 %21, 0
  br i1 %22, label %23, label %25

23:                                               ; preds = %18
  %24 = load i64, i64* %4, align 8
  store i64 %24, i64* %3, align 8
  br label %25

25:                                               ; preds = %23, %18
  br label %26

26:                                               ; preds = %25, %15
  %27 = load i64, i64* %3, align 8
  ret i64 %27
}

declare dso_local i64 @SKIP_TRAMPOLINE_CODE(i64) #1

declare dso_local i32 @find_objc_msgcall(i64, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
